# DINOv3easy

./: .gitignore  EXAMPLES.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
dinov3easy/checkpoints/: .gitignore  checkpoints_location.txt  download_instructions.md
dinov3easy/dinov3/.git-original/: FETCH_HEAD  config  packed-refs
dinov3easy/dinov3/.git-original/logs/: HEAD
dinov3easy/dinov3/dinov3/layers/: attention.py
dinov3easy/dinov3_/.git-original/: index
dinov3easy/dinov3_/.git-original/objects/pack/: pack-72c270432d6ac99693205d0b3e8ed9a0a70c1b35.idx
dinov3easy/dinov3_/.git-original/refs/heads/: main
dinov3easy/load/: __init__.py  load.py  settings.py
dinov3easy/setup/: checkpoints.py  download_checkpoints.py
dinov3easy/utils/: pca.py  predict.py
dinov3easy/view/: _utils.py  all.py  interactive_attention.py  interactive_attention_map.py  interactive_class_similarity.py  interactive_pca.py  interactive_similarity.py  shared.py  visualize_interactive_attention_map.py  visualizers.py
dinov3easy/visualizers/: __init__.py  attention.py  similarity.py
examples/: EXAMPLES.md  example.py
